--- a/aula02/Modelo 1/modelo.html
+++ b/aula02/Modelo 1/modelo.html
@@ -15,10 +15,11 @@
     </header>
     <section>
         <div id="msg">
+            Aqui vai aparecer a mensagem. 
 
         </div>
-        <div id="imagem">
-            <img src="manha.jpg" alt="Foto do dia">
+        <div id="foto">
+            <img id="imagem" src="manha1.png" alt="Foto do dia">
         </div>
 
     </section>
